{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 1055,
  "lineage": "5ea33714-8b08-d37f-e1a3-06fb38c6f0e3",
  "resources": [
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:loadbalancer/app/application-load-balancer/9504cf7eab3e4bc8",
            "arn_suffix": "app/application-load-balancer/9504cf7eab3e4bc8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-246292838.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:001530616812:loadbalancer/app/application-load-balancer/9504cf7eab3e4bc8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05c97df30a6bb6188"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d49167d8c6135d54"
              },
              {
                "subnet_id": "subnet-0d50c83a43581344e"
              }
            ],
            "subnets": [
              "subnet-0d49167d8c6135d54",
              "subnet-0d50c83a43581344e"
            ],
            "tags": {
              "Name": "vas-alb"
            },
            "tags_all": {
              "Name": "vas-alb"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.alb-sg",
            "module.subnet_module.aws_subnet.public-1",
            "module.subnet_module.aws_subnet.public-2",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:listener/app/application-load-balancer/9504cf7eab3e4bc8/bec5b103154a747e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:targetgroup/tg-alb/fcd6f097f818cea9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001530616812:listener/app/application-load-balancer/9504cf7eab3e4bc8/bec5b103154a747e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:loadbalancer/app/application-load-balancer/9504cf7eab3e4bc8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_lb.web-alb",
            "module.alb_module.aws_lb_target_group.tg-alb",
            "module.security_group_module.aws_security_group.alb-sg",
            "module.subnet_module.aws_subnet.public-1",
            "module.subnet_module.aws_subnet.public-2",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:targetgroup/tg-alb/fcd6f097f818cea9",
            "arn_suffix": "targetgroup/tg-alb/fcd6f097f818cea9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001530616812:targetgroup/tg-alb/fcd6f097f818cea9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-alb-vas"
            },
            "tags_all": {
              "Name": "tg-alb-vas"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-alb-gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:001530616812:targetgroup/tg-alb/fcd6f097f818cea9-2024091610400875200000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:001530616812:targetgroup/tg-alb/fcd6f097f818cea9",
            "target_id": "i-00235587a0e9bc42b"
          },
          "dependencies": [
            "module.alb_module.aws_lb_target_group.tg-alb",
            "module.ec2_module.aws_instance.public_ec2_A",
            "module.security_group_module.aws_security_group.public-sg",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:001530616812:instance/i-0f79e2e3b11ca0cf8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f79e2e3b11ca0cf8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b862af6a039e4fe3",
            "private_dns": "ip-10-0-3-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054e43dfdb5ec7b88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b131fc3b875473f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b06315161d1025",
            "tags": {
              "Name": "private-ec2-A"
            },
            "tags_all": {
              "Name": "private-ec2-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b131fc3b875473f8"
            ]
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.private-sg",
            "module.subnet_module.aws_subnet.private-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:001530616812:instance/i-04658a428f9b84bc3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04658a428f9b84bc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a30bb203f64e1326",
            "private_dns": "ip-10-0-4-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034f5d9619422b969",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b131fc3b875473f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01320f23018728145",
            "tags": {
              "Name": "private-ec2-A"
            },
            "tags_all": {
              "Name": "private-ec2-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b131fc3b875473f8"
            ]
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.private-sg",
            "module.subnet_module.aws_subnet.private-2",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:001530616812:instance/i-00235587a0e9bc42b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00235587a0e9bc42b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b785c318b5f5055a",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-44-205-17-255.compute-1.amazonaws.com",
            "public_ip": "44.205.17.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db8db68e31942587",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0718763a8f8735c98"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d50c83a43581344e",
            "tags": {
              "Name": "pubic-ec2-A"
            },
            "tags_all": {
              "Name": "pubic-ec2-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0718763a8f8735c98"
            ]
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.public-sg",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:001530616812:instance/i-03bb4bf6e430c2fdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bb4bf6e430c2fdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0faabc89a1733a6c0",
            "private_dns": "ip-10-0-2-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.213",
            "public_dns": "ec2-3-89-250-231.compute-1.amazonaws.com",
            "public_ip": "3.89.250.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-002d15b7ee6fc655f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0718763a8f8735c98"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d49167d8c6135d54",
            "tags": {
              "Name": "pubic-ec2-B"
            },
            "tags_all": {
              "Name": "pubic-ec2-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0718763a8f8735c98"
            ]
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.public-sg",
            "module.subnet_module.aws_subnet.public-2",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:internet-gateway/igw-0d72d3cef94c33708",
            "id": "igw-0d72d3cef94c33708",
            "owner_id": "001530616812",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0833b1794be0badd1",
            "arn": "arn:aws:ec2:us-east-1:001530616812:elastic-ip/eipalloc-0833b1794be0badd1",
            "domain": "vpc",
            "id": "eipalloc-0833b1794be0badd1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-28-100-81.compute-1.amazonaws.com",
            "public_ip": "100.28.100.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_igw_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0833b1794be0badd1",
            "association_id": "eipassoc-07298ca98ba1d6e39",
            "connectivity_type": "public",
            "id": "nat-0182b420368971001",
            "network_interface_id": "eni-0df4e1e0e099c61fd",
            "private_ip": "10.0.1.142",
            "public_ip": "100.28.100.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d50c83a43581344e"
          },
          "dependencies": [
            "module.nat_module.aws_eip.nat_elastic_ip",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:route-table/rtb-0efb3b12bcd699b78",
            "id": "rtb-0efb3b12bcd699b78",
            "owner_id": "001530616812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0182b420368971001",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_module.aws_eip.nat_elastic_ip",
            "module.nat_module.aws_nat_gateway.nat_igw_local",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:route-table/rtb-0a5dfac4490d247d2",
            "id": "rtb-0a5dfac4490d247d2",
            "owner_id": "001530616812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d72d3cef94c33708",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.vpc-igw",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ee36fd4ae291cd0",
            "route_table_id": "rtb-0efb3b12bcd699b78",
            "subnet_id": "subnet-002b06315161d1025"
          },
          "dependencies": [
            "module.nat_module.aws_eip.nat_elastic_ip",
            "module.nat_module.aws_nat_gateway.nat_igw_local",
            "module.route_module.aws_route_table.private_route",
            "module.subnet_module.aws_subnet.private-1",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a7b4226d37b653e",
            "route_table_id": "rtb-0efb3b12bcd699b78",
            "subnet_id": "subnet-01320f23018728145"
          },
          "dependencies": [
            "module.nat_module.aws_eip.nat_elastic_ip",
            "module.nat_module.aws_nat_gateway.nat_igw_local",
            "module.route_module.aws_route_table.private_route",
            "module.subnet_module.aws_subnet.private-2",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a85f3da504793164",
            "route_table_id": "rtb-0a5dfac4490d247d2",
            "subnet_id": "subnet-0d50c83a43581344e"
          },
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.vpc-igw",
            "module.route_module.aws_route_table.public_route",
            "module.subnet_module.aws_subnet.public-1",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de09b222786af8d9",
            "route_table_id": "rtb-0a5dfac4490d247d2",
            "subnet_id": "subnet-0d49167d8c6135d54"
          },
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.vpc-igw",
            "module.route_module.aws_route_table.public_route",
            "module.subnet_module.aws_subnet.public-2",
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:security-group/sg-05c97df30a6bb6188",
            "description": "security group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-05c97df30a6bb6188",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240916103939018700000001",
            "name_prefix": "terraform-",
            "owner_id": "001530616812",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:security-group/sg-0b131fc3b875473f8",
            "description": "private-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b131fc3b875473f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240916103939037500000003",
            "name_prefix": "terraform-",
            "owner_id": "001530616812",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:security-group/sg-0718763a8f8735c98",
            "description": "public-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0718763a8f8735c98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240916103939037000000002",
            "name_prefix": "terraform-",
            "owner_id": "001530616812",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:subnet/subnet-002b06315161d1025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b06315161d1025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001530616812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1A"
            },
            "tags_all": {
              "Name": "private_subnet_1A"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:subnet/subnet-01320f23018728145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01320f23018728145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001530616812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2A"
            },
            "tags_all": {
              "Name": "private_subnet_2A"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:subnet/subnet-0d50c83a43581344e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50c83a43581344e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001530616812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1A"
            },
            "tags_all": {
              "Name": "public_subnet_1A"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:subnet/subnet-0d49167d8c6135d54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49167d8c6135d54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001530616812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2A"
            },
            "tags_all": {
              "Name": "public_subnet_2A"
            },
            "vpc_id": "vpc-03eb9611e4713dfe6"
          },
          "dependencies": [
            "module.vpc_test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001530616812:vpc/vpc-03eb9611e4713dfe6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9a27fcc8a8442ad",
            "default_route_table_id": "rtb-07e0e3cc538c11576",
            "default_security_group_id": "sg-0a4864cc8f021506e",
            "dhcp_options_id": "dopt-049fa062ba0b2194b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03eb9611e4713dfe6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e0e3cc538c11576",
            "owner_id": "001530616812",
            "tags": {
              "Name": "vas_vpc"
            },
            "tags_all": {
              "Name": "vas_vpc"
            }
          }
        }
      ]
    }
  ]
}